--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -24,7 +24,6 @@
             android:layout_marginBottom="16dp"
             android:drawablePadding="16dp"
             android:drawableRight="@drawable/ic_action_email"
-            android:drawableTint="#01579B"
             android:hint="@string/hint_e_mail"
             android:inputType="textEmailAddress"
             android:padding="12dp"
@@ -39,12 +38,11 @@
         android:textColorHint="#000" >
 
         <EditText
-            android:id="@+id/et_senha"
+            android:id="@+id/et_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawablePadding="16dp"
             android:drawableRight="@drawable/ic_action_password"
-            android:drawableTint="#01579B"
             android:hint="@string/text_senha"
             android:inputType="textPassword"
             android:padding="12dp"
@@ -55,7 +53,7 @@
     </android.support.design.widget.TextInputLayout>
 
     <CheckBox
-        android:id="@+id/cb_save"
+        android:id="@+id/cb_save_token"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
@@ -69,7 +67,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/custom_button_green"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:onClick="signIn"/>
 
     <Button
         android:text="@string/text_cadastrar"
@@ -78,6 +77,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/custom_button_blue"
-        android:layout_marginTop="8dp" />
+        android:layout_marginTop="8dp"
+        android:onClick="toSignUp"/>
 
 </LinearLayout>
