--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,9 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_login"
+    android:background="#ffffff"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.appfirebaserest.activity.SignUpActivity">
+    android:orientation="vertical"
+    android:gravity="center"
+    android:padding="16dp"
+    tools:context="com.example.appfirebaserest.activity.SignInActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#000"
+        android:textColorHint="#000">
+
+        <EditText
+            android:id="@+id/et_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawablePadding="16dp"
+            android:drawableRight="@drawable/ic_action_email"
+            android:hint="@string/hint_e_mail"
+            android:inputType="textEmailAddress"
+            android:padding="12dp"
+            android:textAppearance="?android:textAppearanceMedium" />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#000"
+        android:textColorHint="#000" >
+
+        <EditText
+            android:id="@+id/et_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawablePadding="16dp"
+            android:drawableRight="@drawable/ic_action_password"
+            android:hint="@string/text_senha"
+            android:inputType="textPassword"
+            android:padding="12dp"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:textColor="#000"
+            android:textColorHint="#000" />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#000"
+        android:textColorHint="#000" >
+
+        <EditText
+            android:id="@+id/et_confirm_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawablePadding="16dp"
+            android:drawableRight="@drawable/ic_action_password"
+            android:hint="@string/text_confirmar_senha"
+            android:inputType="textPassword"
+            android:padding="12dp"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:textColor="#000"
+            android:textColorHint="#000" />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <Button
+        android:text="@string/text_cadastrar"
+        android:textColor="#ffffff"
+        android:textSize="18sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/custom_button_blue"
+        android:layout_marginTop="8dp"
+        android:onClick="signUp"/>
+
+</LinearLayout>
