--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_login"
-    android:background="#ffffff"
+    android:background="@color/whiteColor"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -16,8 +16,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:errorEnabled="true"
-        android:textColor="#000"
-        android:textColorHint="#000">
+        android:textColor="@color/blackColor"
+        android:textColorHint="@color/blackColor">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/et_email"
@@ -38,8 +38,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:errorEnabled="true"
-        android:textColor="#000"
-        android:textColorHint="#000" >
+        android:textColor="@color/blackColor"
+        android:textColorHint="@color/blackColor" >
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/et_password"
@@ -51,8 +51,8 @@
             android:inputType="textPassword"
             android:padding="12dp"
             android:textAppearance="?android:textAppearanceMedium"
-            android:textColor="#000"
-            android:textColorHint="#000" />
+            android:textColor="@color/blackColor"
+            android:textColorHint="@color/blackColor" />
 
     </android.support.design.widget.TextInputLayout>
 
@@ -66,7 +66,7 @@
 
     <Button
         android:text="@string/text_entrar"
-        android:textColor="#ffffff"
+        android:textColor="@color/whiteColor"
         android:textSize="18sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -76,7 +76,7 @@
 
     <Button
         android:text="@string/text_cadastrar"
-        android:textColor="#ffffff"
+        android:textColor="@color/whiteColor"
         android:textSize="18sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
