--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_login"
     android:background="@color/whiteColor"
     android:layout_width="match_parent"
@@ -12,10 +12,12 @@
     tools:context="com.example.appfirebaserest.activity.SignInActivity">
 
     <android.support.design.widget.TextInputLayout
+        android:id="@+id/til_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/blackColor"
-        android:textColorHint="@color/blackColor">
+        android:textColorHint="@color/blackColor"
+        app:errorEnabled="true">
 
         <EditText
             android:id="@+id/et_email"
@@ -31,10 +33,12 @@
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
+        android:id="@+id/til_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/blackColor"
-        android:textColorHint="@color/blackColor" >
+        android:textColorHint="@color/blackColor"
+        app:errorEnabled="true">
 
         <EditText
             android:id="@+id/et_password"
@@ -52,10 +56,12 @@
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
+        android:id="@+id/til_confirm_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/blackColor"
-        android:textColorHint="@color/blackColor" >
+        android:textColorHint="@color/blackColor"
+        app:errorEnabled="true">
 
         <EditText
             android:id="@+id/et_confirm_password"
