--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#01579B</color>
     <color name="whiteColor">#ffffff</color>
     <color name="blackColor">#000000</color>
+    <color name="green500">#4CAF50</color>
 </resources>
