--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:drawablePadding="16dp"
             android:drawableRight="@drawable/ic_action_email"
-            android:hint="@string/hint_e_mail"
+            android:hint="@string/text_email"
             android:inputType="textEmailAddress"
             android:padding="12dp"
             android:textAppearance="?android:textAppearanceMedium" />
@@ -61,7 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:layout_gravity="left"
-        android:text="@string/txt_salvar"/>
+        android:text="@string/text_salvar"/>
 
     <Button
         android:text="@string/text_entrar"
