--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#ececec"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.appfirebaserest.activity.MainActivity"
     tools:showIn="@layout/app_bar_main">
@@ -18,8 +19,8 @@
         <ListView
             android:id="@+id/lv_list"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
+            android:layout_height="wrap_content"
+            android:listSelector="@drawable/list_selector"/>
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
