--- a/app/src/main/res/layout/activity_solicitation.xml
+++ b/app/src/main/res/layout/activity_solicitation.xml
@@ -95,6 +95,7 @@
             android:textSize="16sp"
             android:background="@color/green500"
             android:text="@string/text_enviar"
-            android:textColor="@color/whiteColor"/>
+            android:textColor="@color/whiteColor"
+            android:onClick="sendSolicitation"/>
 
 </LinearLayout>
