--- a/app/src/main/res/layout/activity_solicitation.xml
+++ b/app/src/main/res/layout/activity_solicitation.xml
@@ -32,8 +32,6 @@
 
         </LinearLayout>
 
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -46,7 +44,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Motivo da solicitação"
+                android:text="@string/text_motivo_solicitacao"
                 android:textColor="@color/colorPrimary"/>
 
             <EditText
