--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -21,8 +21,8 @@
 
         <ImageView
             android:id="@+id/list_image"
-            android:layout_width="50dip"
-            android:layout_height="50dip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:background="@null"
             android:src="@drawable/ambulance"/>
 
@@ -34,10 +34,10 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/thumbnail"
         android:layout_toRightOf="@+id/thumbnail"
-        android:text="Urgência"
+        android:text="@string/text_temp_urgencia"
         android:textColor="#040404"
         android:typeface="sans"
-        android:textSize="15dip"
+        android:textSize="15sp"
         android:textStyle="bold"/>
 
     <TextView
@@ -46,10 +46,10 @@
     android:layout_height="wrap_content"
     android:layout_below="@id/tv_urgency"
     android:textColor="#343434"
-    android:textSize="10dip"
+    android:textSize="10sp"
     android:layout_marginTop="1dip"
     android:layout_toRightOf="@+id/thumbnail"
-    android:text="Nivel de consciência" />
+    android:text="@string/text_tempo_nivel_consciencia" />
 
     <TextView
         android:id="@+id/tv_nivel_respiracao"
@@ -57,10 +57,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_nivel_consciencia"
         android:textColor="#343434"
-        android:textSize="10dip"
+        android:textSize="10sp"
         android:layout_marginTop="1dip"
         android:layout_toRightOf="@+id/thumbnail"
-        android:text="Nivel de respiração" />
+        android:text="@string/text_temp_nivel_respiracao" />
 
     <TextView
         android:id="@+id/tv_status"
@@ -68,10 +68,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_nivel_respiracao"
         android:textColor="#f11515"
-        android:textSize="10dip"
+        android:textSize="10sp"
         android:layout_marginTop="1dip"
         android:layout_toRightOf="@+id/thumbnail"
-        android:text="Pendente" />
+        android:text="@string/text_temp_pendente" />
 
     <TextView
         android:id="@+id/tv_date"
@@ -80,7 +80,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignTop="@id/tv_urgency"
         android:gravity="right"
-        android:text="30/04/2017 - 00:02:00"
+        android:text="@string/text_temp_date"
         android:layout_marginRight="5dip"
         android:textSize="10dip"
         android:textColor="@color/colorPrimary"
