--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -19,6 +19,6 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="exemplo@gmail.com" />
+        android:text="emersonlemos.yb@gmail.com" />
 
 </LinearLayout>
