--- a/app/src/main/res/menu/activity_main2_drawer.xml
+++ b/app/src/main/res/menu/activity_main2_drawer.xml
@@ -5,23 +5,27 @@
         <item
             android:id="@+id/nav_solicitations"
             android:icon="@drawable/ic_list"
-            android:title="Minhas Ocorrencias" />
+            android:title="@string/minhas_ocorrencias" />
         <item
             android:id="@+id/nav_account"
             android:icon="@drawable/ic_menu_profile"
-            android:title="Minha conta" />
+            android:title="@string/minha_conta" />
+        <item
+            android:id="@+id/nav_camera"
+            android:icon="@drawable/ic_menu_photo"
+            android:title="@string/camera" />
     </group>
 
-    <item android:title="Configuraçoes">
+    <item android:title="@string/configuracoes">
         <menu>
             <item
                 android:id="@+id/nav_info"
                 android:icon="@drawable/ic_menu_info"
-                android:title="Sobre" />
+                android:title="@string/sobre" />
             <item
                 android:id="@+id/nav_exit"
                 android:icon="@drawable/ic_menu_exit"
-                android:title="Sair" />
+                android:title="@string/sair" />
         </menu>
     </item>
 
