--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -6,4 +6,10 @@
         android:orderInCategory="100"
         android:title="@string/action_logout"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_map"
+        android:title="Satélite"
+        android:icon="@drawable/ic_action_map"
+        app:showAsAction="always"/>
 </menu>
