--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -27,7 +27,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
+        app:backgroundTint="@color/red900"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/ic_action_add" />
+        app:srcCompat="@drawable/ic_ambulance" />
+
+    <!-- Layout sem internet -->
+    <RelativeLayout
+        android:id="@+id/network_disconnect"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            layout="@layout/network_disconnect" />
+
+    </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
